<resources>
    <string name="app_name">crystal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="refresh">refresh</string>
    <string name="select_all">select all</string>
    <string name="deselect_all">deselect all</string>
    <string name="cancel">cancel</string>
    <string name="wake">wake</string>
    <string name="del">del</string>
    <string name="sleep">sleep</string>
    <string name="create_shortcuts">create_shortcut</string>
    <string name="sleep_shortcut">create sleep-shortcut</string>
    <string name="msg_slept">all slept</string>
    <string name="lable_resolver">*slept apps*</string>
    <string name="msg_done">done</string>
    <string name="not_found_prog">can not find program to process</string>
</resources>
